--- a/Soundfull/ar.lproj/Localizable.strings
+++ b/Soundfull/ar.lproj/Localizable.strings
@@ -19,7 +19,7 @@
 "Delete" = "حذف";
 
 /* No comment provided by engineer. */
-"Download" = "تحميل"; /* NEW */
+"Download" = "تحميل";
 
 /* No comment provided by engineer. */
 "Download Sound" = "تحميل مقطع صوتي";
