--- a/Soundfull/en.lproj/Localizable.strings
+++ b/Soundfull/en.lproj/Localizable.strings
@@ -19,7 +19,7 @@
 "Delete" = "Delete";
 
 /* No comment provided by engineer. */
-"Download" = "Download"; /* NEW */
+"Download" = "Download";
 
 /* No comment provided by engineer. */
 "Download Sound" = "Download Sound";
