--- a/Soundfull/en.lproj/Localizable.strings
+++ b/Soundfull/en.lproj/Localizable.strings
@@ -1,16 +1,28 @@
 /* Created with Localizable Strings Merge, the swiss-army knife for iOS and OS X localization. */
 
 /* No comment provided by engineer. */
+"An Error has occured converting the file" = "An Error has occured converting the file"; /* NEW */
+
+/* No comment provided by engineer. */
 "Are you sure you want to delete this audio?" = "Are you sure you want to delete this audio?";
 
 /* No comment provided by engineer. */
 "Cancel" = "Cancel";
 
 /* No comment provided by engineer. */
+"Cannot Convert" = "Cannot Convert"; /* NEW */
+
+/* No comment provided by engineer. */
 "Category" = "Category";
 
 /* No comment provided by engineer. */
 "Coming Soon, you will be able to convert any viedo from your library to audio." = "Coming Soon, you will be able to convert any viedo from your library to audio.";
+
+/* No comment provided by engineer. */
+"Converting has been canceled" = "Converting has been canceled"; /* NEW */
+
+/* No comment provided by engineer. */
+"Could not download youtube file." = "Could not download youtube file."; /* NEW */
 
 /* No comment provided by engineer. */
 "Could not save audio" = "Could not save audio";
@@ -25,16 +37,28 @@
 "Download Sound" = "Download Sound";
 
 /* No comment provided by engineer. */
+"Downloaded" = "Downloaded"; /* NEW */
+
+/* No comment provided by engineer. */
 "Downloading..." = "Downloading...";
 
 /* No comment provided by engineer. */
 "Finalizing..." = "Finalizing...";
 
 /* No comment provided by engineer. */
+"Invalid URL" = "Invalid URL"; /* NEW */
+
+/* No comment provided by engineer. */
 "My Sounds" = "My Sounds";
 
 /* No comment provided by engineer. */
+"non audio file found" = "non audio file found"; /* NEW */
+
+/* No comment provided by engineer. */
 "O.K" = "O.K";
+
+/* No comment provided by engineer. */
+"Operation Canceled" = "Operation Canceled"; /* NEW */
 
 /* No comment provided by engineer. */
 "Paste URL" = "Paste URL";
@@ -58,8 +82,20 @@
 "Soundfull" = "Soundfull";
 
 /* No comment provided by engineer. */
+"The URL you entered is invalid" = "The URL you entered is invalid"; /* NEW */
+
+/* No comment provided by engineer. */
 "Title" = "Title";
 
 /* No comment provided by engineer. */
+"URL provided is invalid" = "URL provided is invalid"; /* NEW */
+
+/* No comment provided by engineer. */
+"you are trying to download a non audio file" = "you are trying to download a non audio file"; /* NEW */
+
+/* No comment provided by engineer. */
 "Your file has finished downloading" = "Your file has finished downloading";
+
+/* No comment provided by engineer. */
+"Youtube is not supported" = "Youtube is not supported"; /* NEW */
 
